Styling issues, maybe works on mobile now?

--- a/webapp/public/styles.css
+++ b/webapp/public/styles.css
@@ -20,17 +20,17 @@ body {
 }
 
 #chart-container {
-    width: 80%;
-    margin: 10px auto;
+    width: 100%;
+    margin: 1px auto;
     align: center;
     background-color: var(--night);
-    padding: 5px;
+    padding: 0px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 canvas {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
 }
 
